# mcp_forth

./: .gitignore  .gitmodules  Makefile  README.md  backend_generator.py  compile-and-run.sh  compile-exe.c  compile.c  depth.fs  e32s3_backend.c  e32s3_backend_generator.py  e32s3_opcodes.s  elf_linux.c  elf_nuttx.c  esp32s3.h  esp32s3_backend.c  esp32s3_backend_generator.py  esp32s3_engine.c  esp32s3_engine_asm.S  execute-exe.c  execute.c  global.h  mcp_forth.c  mcp_forth.h  mcp_forth_generator.py  nasm.py  num.c  num_test.c  opcodes.s  runtime_assert.c  runtime_file.c  runtime_io.c  runtime_process.c  runtime_string.c  runtime_threadutil.c  runtime_time.c  simple_gen.py  util_helper.py  vm_backend.c  vm_engine.c  (+5 more)
benchmarks/pixel_compress/: .gitignore  README.md  c.c  fs.fs
forth_programs/: hello123.fs  lv_example_get_started_2.fs  slow.fs  thread_test.fs
forth_programs/hash_xor/: hash_input.txt  hash_xor.fs  hash_xor_alt.fs  hash_xor_alt_2.fs
forth_programs/life/: life.fs  starting_board.txt  starting_board_2.txt
forth_programs/lvgl/forth_programs/: lazy_load_scroll.fs  lv_example_anim_2.fs  lv_example_get_started_1.fs  lv_example_get_started_2.fs  really_simple.fs  (+5 more)
forth_programs/lvgl/workspace/: .gitignore  CMakeLists.txt  Makefile  README.md  lv_conf.h  lvgl_forth_runtime.c  lvgl_forth_runtime.h  lvgl_json.jq  lvgl_json.py  main.c  mouse_cursor_icon.c  runtime_lvgl.h
forth_programs/lvgl/workspace/include/mcp/: mcp_forth.h
forth_programs/simple/: allot.fs  binary_search.fs  dumb_fizbuz.fs  execution_tokens.fs  exit_loop.fs  factorial.fs  fib.fs  fill.fs  fizzbuzz.fs  func_minimum.fs  functions.fs  hello.fs  hex_literal.fs  mingle.fs  move.fs  obscure_cf.fs  override-builtin.fs  pick.fs  prime.fs  prime_simple.fs  question-dup.fs  recursion.fs  smart_fizzbuzz.fs  test_nip.fs  tuck.fs  two-star.fs
